# hw-fstprt-simeg-orderentry-dc-tai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_SCAVOLINI.md  fast_prototype.md  inspect_scavolini_table.py  pyproject.toml  service.yaml  start_backend.sh  start_frontend.sh
.kiro/specs/simeg-order-entry-prototype/: .config.kiro  design.md  requirements.md  tasks.md
BE/: extraction_service.py  flat_table_transformer.py  italian_mapper.py  main.py  models.py  scavolini_loader.py  validation_service.py  xml_processor.py
BE/docs/inputs/: 4_124_5525059556_20251218.XML
FE/: app.py
app/: __init__.py  main.py
app/config/: __init__.py  settings.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  client_detector.py  client_strategy.py  extraction_service.py  validation_service.py  xml_processor.py
app/utils/: __init__.py  flat_table_transformer.py  lube_loader.py  mock_data.py  scavolini_loader.py
docs/: FE_REASONING_UPDATE.md  GRADIO_REASONING_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md
docs/architecture/: REFACTORING_SUMMARY.md  mago4_bridge_table_schema.md
docs/deployment/: CLOUD_RUN_DEPLOYMENT.md  DEPLOYMENT_COMMANDS.md  README.md  SERVICE_YAML_GUIDE.md
docs/inputs/: 3_124_5525059529_20251218.XML  3_124_5526000390_20260113.XML  4_124_5525059943_20251222.XML  4_124_5525060302_20251223.XML
docs/transcoding/: Tabella transcodifica Lube 13.02.26 (1).xlsx
scripts/: README.md  deploy-simple.sh  deploy.sh  inspect_scavolini_table.py  start_backend.sh
(+8 files in other folders)
